--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,17 @@
+body {
+    margin: 20px;
+    background: url("../images/memphis-colorful.png");
+}
 
 h1 {
-    font-size: 30px;
+    font-size: 40px;
+    padding: 20px;
+    font-weight: bold;
 }
-p {
-    font-size: 20px;
+p, span {
+    font-size: 25px;
+    padding: 20px;
 }
+
+
+
